# lvglMreDemo

./: .gitignore  CMakeLists.txt  README.md
include/: lv_conf.h
lv_port_mre/: CMakeLists.txt  event_loop.c  event_loop.h  lv_port_disp_mre.c  lv_port_disp_mre.h  lv_port_fs_mre.c  lv_port_fs_mre.h  lv_port_indev_mre.c  lv_port_indev_mre.h
main/: CMakeLists.txt  main.cpp
resourses/: CMakeLists.txt
